Fix footer overflow

--- a/style.css
+++ b/style.css
@@ -111,7 +111,9 @@ footer {
     color: white;
     text-align: center;
     padding: 10px 0;
+    overflow: hidden;
 }
+
 #instruction {
     margin-top: 3rem;
     margin-bottom: 2rem;
@@ -255,7 +257,7 @@ footer {
         margin: 1rem;
     }
     header h1 {
-        font-size: 1.7rem;
+        font-size: 1.5rem;
         letter-spacing: 0;
     }
     .textareaContainer {
@@ -270,6 +272,7 @@ footer {
     }
 }
 @media (max-width: 1005px) {
+    }
     .container {
         margin-top: 2rem;
         margin-bottom: 2rem;
@@ -277,6 +280,8 @@ footer {
     header h1 {
         font-size: 2.3rem;
         letter-spacing: 0.5rem;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
     }
     .textareaContainer {
         display: flex;
@@ -288,4 +293,3 @@ footer {
         margin-top: 0.5rem;
         margin-bottom: 1.5rem;
     }
-}
